--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "fzaninotto/faker": "^1.8",
         "laravel/lumen-framework": "5.7.*",
+        "laravel/tinker": "^1.0",
         "vlucas/phpdotenv": "~2.2"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
         "phpunit/phpunit": "~7.0",
         "mockery/mockery": "~1.0"
     },
