--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.1.3",
         "fzaninotto/faker": "^1.8",
+        "illuminate/redis": "^5.7",
         "laravel/lumen-framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "vlucas/phpdotenv": "~2.2"
